# dla

./: .gitignore  CMakeLists.txt  Makefile  README.md  dla.pde  o1.cpp  o1.pde
data/: result.csv  result3d.csv
src/: dla2d.cpp  dla3d.cpp  o1.cpp
